// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`People Kusama Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "HjV6E4bhFtVYVHtFGcvaKoPjMei1yQDRicZ5YZVZPBj4LFf",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "EyCT2L2XcppNEvDXVuiHxHwwV5ntWiJGRC4yByG8yktdFLT",
      "callHash": "(hash)",
      "multisig": "HjV6E4bhFtVYVHtFGcvaKoPjMei1yQDRicZ5YZVZPBj4LFf",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "E7yySYCVFxjKjZFHvEocrjiGWgRRX4Lr2TC98XXesf9eEm2",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "HZAMcszveFWnZcqBkaHJTTyWXYfCqCF88maVMtBhPRvFfVw",
      "callHash": "(hash)",
      "multisig": "E7yySYCVFxjKjZFHvEocrjiGWgRRX4Lr2TC98XXesf9eEm2",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "DN8G6LsDKbU8TPDS6WGEGWTSTjhGRtCZ3BBjqr2MVS4SSkD",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "Gs8KxaM3NEWQ63FhnxmdSMnp2KpEEtPee6TzBSAmLm95nAx",
      "callHash": "(hash)",
      "multisig": "GWjoiJaRBwJy9t5Sf994YpuHyjf1FHrFZ2tnFxTZaZejue9",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
